--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "mongoose": "^8.6.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
