--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "./src/index.ts",
+  "main": "./src/server.ts",
   "scripts": {
     "dev": "nodemon "
   },
