--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,33 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "./src/server.ts",
+  "main": "./src/app.ts",
   "scripts": {
-    "dev": "nodemon "
+    "dev": "nodemon --exec ts-node ./src/app.ts",
+    "build": "tsc",
+    "start": "node ./dist/app.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
-  "author": "",
+  "author": "Ram",
   "license": "ISC",
-  "description": "",
+  "description": "A backend service using TypeScript and Express.",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "config": "^3.3.12",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.7.0",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/config": "^3.3.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -27,5 +35,13 @@
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "keywords": [
+    "backend",
+    "typescript",
+    "express"
+  ],
+  "engines": {
+    "node": ">=14.x"
   }
 }
