--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src",
     "target": "ESNext",
     "module": "commonjs",
     "strict": true,
@@ -12,5 +14,11 @@
         "node_modules/*"
       ]
     }
-  }
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
